[project]
name = "wg-pyrtal"
version = "0.1.0"
description = "A Python wrapper for WGPortal API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Beerhardt"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Beerhardt/wg-pyrtal"
Repository = "https://github.com/Beerhardt/wg-pyrtal"
Issues = "https://github.com/Beerhardt/wg-pyrtal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wg_pyrtal*"]
